--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -10,10 +10,10 @@ body {
   display: block;
   text-align: right;
 }
-.description img {
+.description-img {
   width: 100%;
 }
-.description .more-inf {
+.description .description-link {
   font-family: fantasy, cursive;
 }
 
@@ -35,17 +35,16 @@ body {
 .add-tasks {
   display: flex;
 }
-ul {
+.section-body {
   margin:0;
   padding: 0px;
+  list-style: none;
 }
-li, h3 {
-  list-style:none;
-}
-input,button{
+
+.input,.button {
   outline:none;
 }
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -54,12 +53,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.section-title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -68,7 +66,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.input[type="text"] {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -80,21 +78,21 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.input[type="text"]:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
-  display: block;
-  margin: 0 0 20px;
+.add-tasks {
+  margin: 20px 0 0 0;
 }
-input#new-task {
+
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.section-body-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -103,47 +101,47 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.section-body-item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.section-body-item > .input[type="checkbox"] {
   margin: 0 10px;
 }
-li > label {
+.task-name {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.section-body-item > .input[type="text"] {
   width: 226px
 }
-button.delete img {
+.button-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.button-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .task-name {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.section-body-item .input[type=text] {
   display:none
 }
 
-ul li.edit-mode input[type=text] {
+.section-body-item.edit-mode .input[type=text] {
   display:inline-block;
   width:224px
 }
 
-ul li.edit-mode label {
+.section-body-item.edit-mode .task-name {
   display:none;
 }
