refactor(basic-3.7): add semicolons after properties

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .add-tasks {
@@ -131,7 +131,7 @@
 }
 
 .section-body-item > .input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 
 .button-img {
@@ -146,18 +146,18 @@
 
 /* Completed */
 #completed-tasks .task-name {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .section-body-item .input[type=text] {
-  display: none
+  display: none;
 }
 
 .section-body-item.edit-mode .input[type=text] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .section-body-item.edit-mode .task-name {
