--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
   display: flex;
 }
 
-.section-body {
+.list {
   margin: 0;
   padding: 0px;
   list-style: none;
@@ -107,7 +107,7 @@
 }
 
 /* Task list */
-.section-body-item {
+.list-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -116,11 +116,11 @@
   align-items: center;
 }
 
-.section-body-item > * {
+.list-item > * {
   vertical-align: middle;
 }
 
-.section-body-item > .input[type="checkbox"] {
+.list-item > .input[type="checkbox"] {
   margin: 0 10px;
 }
 
@@ -131,7 +131,7 @@
   width: 226px;
 }
 
-.section-body-item > .input[type="text"] {
+.list-item > .input[type="text"] {
   width: 226px;
 }
 
@@ -152,15 +152,15 @@
 }
 
 /* Edit Task */
-.section-body-item .input[type=text] {
+.list-item .input[type=text] {
   display: none;
 }
 
-.section-body-item.edit-mode .input[type=text] {
+.list-item.edit-mode .input[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-.section-body-item.edit-mode .task-name {
+.list-item.edit-mode .task-name {
   display: none;
 }
